# netuser-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  groups.rs  lib.rs  main.rs  privs.rs  users.rs
