[package]
name = "netuser-rs"
authors = ["secur30nly"]
description = "Rust bindings to Microsoft Windows users / groups management API"
license = "BSD 2-Clause \"Simplified\" License"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.30"
clap = { version = "4.4.0", features = ["derive"] }
log = { version = "0.4.19", features = ["std"] }
simple_logger = "4.2.0"


[dependencies.windows-sys]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_System_LibraryLoader",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_NetManagement",
    "Win32_Networking_WinSock",
    "Win32_System_SystemInformation",
    "Win32_System_Environment",
    "Win32_System_ProcessStatus",
    "Win32_Globalization",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Kernel",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Networking_ActiveDirectory",
    "Win32_Security_Authentication_Identity",

]

# less binary size (~x1.5), but more compile time
[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true    # Instructs the linker to optimize at the link stage
opt-level = "z"  # Optimize for size.
codegen-units = 1

[features]
debug = []
